First stage of tabs feat

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -77,3 +77,4 @@ kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", vers
 buildConfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildConfig" }
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
 sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
+android-library = { id = "com.android.library", version.ref = "agp" }
