--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,27 +5,27 @@ compose = "1.8.2"
 agp = "8.10.1"
 androidx-activityCompose = "1.10.1"
 androidx-uiTest = "1.8.3"
-hotReload = "1.0.0-alpha11"
+hotReload = "1.0.0-beta04"
 kermit = "2.0.6"
-ktor = "3.2.1"
+ktor = "3.2.3"
 androidx-lifecycle = "2.9.1"
-androidx-navigation = "2.9.0-beta03"
+androidx-navigation = "2.9.0-beta04"
 kotlinx-serialization = "1.9.0"
 koin = "4.1.0"
 multiplatformSettings = "1.3.0"
-kotlinx-datetime = "0.7.0"
-buildConfig = "5.6.5"
+kotlinx-datetime = "0.7.1"
+buildConfig = "5.6.7"
 materialKolor = "2.1.1"
-jewel = "0.28.0-252.15920"
+jewel = "0.29.0-252.24604"
 jna = "5.17.0"
-platformtools = "0.4.0"
-composenativetray = "0.6.7"
+platformtools = "0.5.0"
+composenativetray = "0.6.9"
 kotlinx-coroutines = "1.10.2"
 slf4j = "2.0.17"
-maven-publish = "0.33.0"
+maven-publish = "0.34.0"
 sqlDelight = "2.1.0"
-adaptiveNavigation = "1.1.1"
-navigationCompose = "2.9.0-beta03"
+adaptiveNavigation = "1.1.2"
+navigationCompose = "2.9.0-beta04"
 
 [libraries]
 
