--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 
 kotlin = "2.2.0"
-compose = "1.8.2"
+compose = "1.9.0-beta01"
 agp = "8.10.1"
 androidx-activityCompose = "1.10.1"
 androidx-uiTest = "1.8.3"
