--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 
 filekitCore = "0.12.0"
 jsoup = "1.21.2"
+jvmNativeTrustedRoots = "1.1.7"
 kotlin = "2.2.20"
 compose = "1.9.1"
 agp = "8.12.3"
@@ -42,6 +43,7 @@ filekit-dialogs = { module = "io.github.vinceglb:filekit-dialogs", version.ref =
 filekit-dialogs-compose = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "filekitCore" }
 jdbc-driver = { module = "app.cash.sqldelight:jdbc-driver", version.ref = "sqliteDriver" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
+jvm-native-trusted-roots = { module = "org.jetbrains.nativecerts:jvm-native-trusted-roots", version.ref = "jvmNativeTrustedRoots" }
 kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
