ci(workflows): refine JBR extraction logic to avoid container folder

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,8 @@ jobs:
           curl -L -o jbr.tar.gz "${{ matrix.jdk_url }}"
           mkdir -p "$RUNNER_TEMP/jbr"
           tar -xzf jbr.tar.gz -C "$RUNNER_TEMP/jbr"
-          JBR_DIR=$(find "$RUNNER_TEMP/jbr" -maxdepth 1 -type d -name "jbr*" | head -n 1)
+          # Pick the extracted JBR directory (not the container folder)
+          JBR_DIR=$(find "$RUNNER_TEMP/jbr" -mindepth 1 -maxdepth 1 -type d -name "jbr*" | head -n 1)
           echo "JAVA_HOME=$JBR_DIR" >> "$GITHUB_ENV"
           echo "$JBR_DIR/bin" >> "$GITHUB_PATH"
 
