ci(workflows): replace macOS dmg packaging with pkg in deploy pipeline

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -84,7 +84,7 @@ jobs:
         shell: bash
         run: |
           chmod +x ./gradlew
-          ./gradlew :SeforimApp:createReleaseDistributable :SeforimApp:packageReleaseDmg
+          ./gradlew :SeforimApp:createReleaseDistributable :SeforimApp:packageReleasePkg
 
       # 5) Upload artifacts
       - name: Upload Linux .deb
