--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Release Compose Desktop App (Linux deb, Windows msi, macOS dmg with JBR)
+name: Build and Release Compose Desktop App (Linux deb, Windows msi, macOS pkg with JBR)
 on:
   push:
     tags:
@@ -79,7 +79,7 @@ jobs:
         shell: pwsh
         run: .\gradlew.bat :SeforimApp:createReleaseDistributable :SeforimApp:packageReleaseMsi
 
-      - name: Build macOS .dmg
+      - name: Build macOS .pkg
         if: startsWith(matrix.os, 'macos')
         shell: bash
         run: |
@@ -103,12 +103,12 @@ jobs:
           path: SeforimApp/build/compose/binaries/main-release/msi/*.msi
           if-no-files-found: error
 
-      - name: Upload macOS .dmg
+      - name: Upload macOS .pkg
         if: startsWith(matrix.os, 'macos')
         uses: actions/upload-artifact@v4
         with:
-          name: macos-dmg
-          path: SeforimApp/build/compose/binaries/main-release/dmg/*.dmg
+          name: macos-pkg
+          path: SeforimApp/build/compose/binaries/main-release/pkg/*.pkg
           if-no-files-found: error
 
   release:
@@ -137,7 +137,7 @@ jobs:
       - name: Download macOS artifact
         uses: actions/download-artifact@v4
         with:
-          name: macos-dmg
+          name: macos-pkg
 
       # 2) Inspect
       - name: List downloaded files
@@ -150,6 +150,6 @@ jobs:
           files: |
             *.deb
             *.msi
-            *.dmg
+            *.pkg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
