--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 
+commonsCompress = "1.28.0"
 composeSonner = "0.4.0"
 confettikit = "0.6.0"
 filekitCore = "0.12.0"
@@ -43,6 +44,7 @@ lucene = "10.3.1"
 androidx-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-uitest-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-uiTest" }
 androidx-uitest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-uiTest" }
+commons-compress = { module = "org.apache.commons:commons-compress", version.ref = "commonsCompress" }
 compose-sonner = { module = "io.github.brdominguez:compose-sonner", version.ref = "composeSonner" }
 confettikit = { module = "io.github.vinceglb:confettikit", version.ref = "confettikit" }
 filekit-core = { module = "io.github.vinceglb:filekit-core", version.ref = "filekitCore" }
