--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -109,7 +109,7 @@ jobs:
         if: startsWith(matrix.os, 'macos')
         uses: actions/upload-artifact@v4
         with:
-          name: macos-pkg
+          name: macos-pkg-${{ matrix.jdk_arch }
           path: SeforimApp/build/compose/binaries/main-release/pkg/*.pkg
           if-no-files-found: error
 
