--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,8 +16,10 @@ jobs:
             jdk_url: "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk_jcef-21.0.8-windows-x64-b1163.69.zip"
           - os: macos-latest  # runner Apple Silicon (ARM64)
             jdk_url: "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk_jcef-21.0.9-osx-aarch64-b895.147.pkg"
+            jdk_arch: aarch64
           - os: macos-latest  # runner Apple Silicon (ARM64) with jbr X64
             jdk_url: "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk_jcef-21.0.9-osx-x64-b895.147.pkg"
+            jdk_arch: x64
 
     steps:
       # 1) Checkout with tags and submodules
