--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -84,6 +84,21 @@ jobs:
         shell: pwsh
         run: .\gradlew.bat :SeforimApp:createReleaseDistributable :SeforimApp:packageReleaseMsi
 
+      # Build Windows .exe (שמו בעברית - עובד ללא WiX)
+      - name: Build Windows .exe
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: .\gradlew.bat :SeforimApp:createReleaseDistributable :SeforimApp:packageReleaseExe
+
+      # Upload Windows .exe
+      - name: Upload Windows .exe
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-exe
+          path: SeforimApp/build/compose/binaries/main-release/exe/*.exe
+          if-no-files-found: error
+
       # Print jpackage error log to console if build failed
       - name: Print jpackage error log
         if: failure() && matrix.os == 'windows-latest'
@@ -164,6 +179,11 @@ jobs:
         with:
           name: windows-msi
 
+      - name: Download Windows EXE artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-exe
+
       - name: Download macOS artifacts
         uses: actions/download-artifact@v4
         with:
@@ -182,5 +202,6 @@ jobs:
             *.deb
             *.msi
             *.pkg
+            *.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
